--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <span class="blur"></span>
             <span class="blur"></span>
             <div class="text">
-                <h1>Hello! I'm <span>Mohamed Eltaib.</span></h1>
+                <h1>Hello! I'm <span>Mohamed Eltaib!</span></h1>
                 <p style="font-size: 2rem; font-family: Verdana, sans-serif;">
                     Computer science major with a passion for solving complex challenges.
                 </p>
