--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="background-video">
         <video autoplay loop muted playsinline>
-            <source src="assets/shadergradient1.webm" type="video/webm">
+            <source src="assets/shadergradient.webm" type="video/webm">
         </video>
     </div>
     <nav>
