--- a/index.html
+++ b/index.html
@@ -2,19 +2,26 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css" rel="stylesheet" />
     <link href="style.css" rel="stylesheet" />
+    <link rel="icon" type="image/png" href="logo.png">
+
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
 </head>
 
 <body>
     <div class="background-video">
         <video autoplay loop muted playsinline>
-            <source src="assets/shadergradient.webm" type="video/webm">
+            <source src="assets/back.webm" type="video/webm">
         </video>
+    </div>
+    <div id="particles-js"></div>
+
+    <div class="background-image">
+        <img src="feather.png" alt="Background Image">
     </div>
     <nav>
         <div class="nav-logo">
@@ -24,9 +31,9 @@
         </div>
         <ul class="nav-links">
             <li class="link"><a href="#">Home</a></li>
-            <li class="link" id="link1"><a href="#">Projects</a></li>
-            <li class="link" id="link2"><a href="#">Skills</a></li>
-            <li class="link" id="link3"><a href="#">About Me</a></li>
+            <li class="link" id="link1"><a href="#projects">Projects</a></li>
+            <li class="link" id="link2"><a href="#overview">Skills</a></li>
+            <li class="link" id="link3"><a href="#contact">About Me</a></li>
         </ul>
     </nav>
     <div class="separator">
@@ -62,23 +69,62 @@
             Computer science major with expertise in programming, algorithm design, and data structures. Passionate
             about leveraging technology for challenging problem-solving. Experienced in Java and Python.
         </p>
-        <h2 class="header">SKILLS</h2>
+        <h2 class="header" style="text-align: center; font-size: 34px; ">LANGUAGES</h2>
+
+        <section id="language-badges">
+            <div class="features">
+                <div class="card">
+                    <img src="https://img.shields.io/badge/python-3670A0?style=for-the-badge&logo=python&logoColor=ffdd54"
+                        alt="Python Badge" style="width: 110px; height: 35px;">
+                </div>
+                <div class="card">
+                    <img src="https://img.shields.io/badge/java-007396?style=for-the-badge&logo=java&logoColor=white"
+                        alt="Java Badge" style="width: 70px; height: 35px;">
+                </div>
+                <div class="card">
+                    <img src="https://img.shields.io/badge/c-A8B9CC?style=for-the-badge&logo=c&logoColor=white"
+                        alt="C Badge" style="width: 70px; height: 35px;">
+                </div>
+                <div class="card">
+                    <img src="https://img.shields.io/badge/html-E34F26?style=for-the-badge&logo=html5&logoColor=white"
+                        alt="HTML Badge" style="width: 100px; height: 35px;">
+                </div>
+                <div class="card">
+                    <img src="https://img.shields.io/badge/CSS-1572B6?style=for-the-badge&logo=css3&logoColor=white"
+                        alt="Css" style="width: 80px; height: 35px;">
+                </div>
+                <div class="card">
+                    <img src="https://img.shields.io/badge/JavaScript-F7DF1E?style=for-the-badge&logo=javascript&logoColor=white"
+                        alt="JavaS" style="width: 120px; height: 30px;">
+                </div>
+                <div class="card">
+                    <img src="https://img.shields.io/badge/Lisp-5886A5?style=for-the-badge&logo=lisp&logoColor=white"
+                        alt="Lisp" style="width: 70px; height: 35px;">
+                </div>
+                <div class="card">
+                    <img src="https://img.shields.io/badge/Git-F05032?style=for-the-badge&logo=git&logoColor=white"
+                        alt="Git" style="width: 80px; height: 35px;">
+                </div>
+            </div>
+        </section>
+
+
+
+
+
+
+        <h2 class="header" style="text-align: center; font-size: 34px; ">SKILLS</h2>
         <div class="features">
             <div class="card">
                 <i class="ri-money-dollar-box-line"></i>
                 <h4>Languages</h4>
-                <p>Python, Java, C/C++, HTML, CSS, Lisp</p>
-            </div>
-            <div class="card">
-                <i class="ri-money-dollar-box-line"></i>
-                <h4>Java</h4>
-                <p>School</p>
+                <p>Python, Java, C/C++, HTML, CSS, JavaScript, Lisp, SmallTalk</p>
             </div>
             <div class="card">
                 <i class="ri-money-dollar-box-line"></i>
                 <h4>Courses</h4>
-                <p>Computer Science I &amp; II, Data Structures, Computer Organization I, Introduction to UNIX, C and
-                    C++, Linear Algebra, Calculus and Computational Methods I, Discrete Mathematics I</p>
+                <p>Data Structures, Operating Systems, Discrete Structures, Software Engineering,
+                    Computer Science I/II, Computer Organization I/II, Intro to C and UNIX, Linear Algebra</p>
             </div>
             <div class="card">
                 <i class="ri-money-dollar-box-line"></i>
@@ -86,27 +132,35 @@
                 <p>Designer at Gamefam Studios for almost 2 years, involved with Sonic, TMNT, NFL, Spongebob, Barbie,
                     etc.</p>
             </div>
+            <div class="card">
+                <i class="ri-money-dollar-box-line"></i>
+                <h4>Technologies</h4>
+                <p>React, Node.js, Git, AWS, WordPress</p>
+            </div>
         </div>
     </section>
 
+    <h2 class="section-title">My Projects</h2>
 
     <section id="projects">
-        <h2>My Projects</h2>
 
         <div class="project">
             <h3>Movie Website Explorer</h3>
             <img src="assets/thum.PNG" alt="Movie Website Explorer Thumbnail">
             <p>Explore movie details, reviews, and ratings.</p>
             <a href="https://ryzenstudios.github.io/Movie-Website-Explorer-" target="_blank">Visit</a>
-            <a href="https://github.com/RyzenStudios/Movie-Website-Explorer-" target="_blank">View Code</a>
+            <a href="https://github.com/RyzenStudios/Movie-Website-Explorer-" target="_blank"
+                class="view-code-link">View Code</a>
+
         </div>
 
         <div class="project">
-            <h3>Eli Camps Website</h3>
-            <img src="assets/eli.PNG" alt="Eli Camps Website Thumbnail">
-            <p>Discover information about Eli Camps and its offerings.</p>
+            <h3>Sketchbook</h3>
+            <img src="assets/draw.PNG" alt="Eli Camps Website Thumbnail">
+            <p>App to draw whatever you desire!</p>
             <a href="https://ryzenstudios.github.io/Eli-Camps-Website" target="_blank">Visit</a>
-            <a href="https://github.com/RyzenStudios/Eli-Camps-Website" target="_blank">View Code</a>
+            <a href="https://github.com/RyzenStudios/Eli-Camps-Website" target="_blank" class="view-code-link">View
+                Code</a>
         </div>
 
         <div class="project">
@@ -114,16 +168,36 @@
             <img src="assets/arc.PNG" alt="Arcade Portfolio Thumbnail">
             <p>Showcasing a personal portfolio with creative projects.</p>
             <a href="https://ryzenstudios.github.io/Arcade-Personal-Website" target="_blank">Visit</a>
-            <a href="https://github.com/RyzenStudios/Arcade-Personal-Website" target="_blank">View Code</a>
+            <a href="https://github.com/RyzenStudios/Arcade-Personal-Website" target="_blank"
+                class="view-code-link">View Code</a>
         </div>
 
         <div class="project">
             <h3>Ada Analytics Web App</h3>
             <img src="assets/ada.PNG" alt="Movie Website Explorer Thumbnail">
             <p>Future of investing.</p>
-            <a href="https://ryzenstudios.github.io/Movie-Website-Explorer-" target="_blank">Visit</a>
-            <a href="https://github.com/RyzenStudios/Movie-Website-Explorer-" target="_blank">View Code</a>
+            <a href="https://adaanalytics.io/" target="_blank">Visit</a>
         </div>
+
+        <div class="project">
+            <h3>Eli Camps Website</h3>
+            <img src="assets/eli.PNG" alt="Eli Camps Website Thumbnail">
+            <p>Discover information about Eli Camps and its offerings.</p>
+            <a href="https://ryzenstudios.github.io/Eli-Camps-Website" target="_blank">Visit</a>
+            <a href="https://github.com/RyzenStudios/Eli-Camps-Website" target="_blank" class="view-code-link">View
+                Code</a>
+        </div>
+
+        <div class="project">
+            <h3>Eli Camps Website</h3>
+            <img src="assets/eli.PNG" alt="Eli Camps Website Thumbnail">
+            <p>Discover information about Eli Camps and its offerings.</p>
+            <a href="https://ryzenstudios.github.io/Eli-Camps-Website" target="_blank">Visit</a>
+            <a href="https://github.com/RyzenStudios/Eli-Camps-Website" target="_blank" class="view-code-link">View
+                Code</a>
+        </div>
+
+
     </section>
 
     <section class="container hidden" id="contact">
@@ -159,13 +233,33 @@
             </a>
         </div>
         <div class="footer">
-            <p class="footer-copyright">&copy; 2023 Mohamed Eltaib. All rights reserved.</p>
+            <p class="footer-copyright">&copy; 2024 Mohamed Eltaib. All rights reserved.</p>
         </div>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
     <script src="index.js"></script>
     <script>
+
+        //background
+        document.addEventListener("DOMContentLoaded", function () {
+            var background = document.querySelector(".background-image");
+
+            window.addEventListener("scroll", function () {
+                var scrollValue = window.scrollY;
+                background.style.transform = "translate3d(0," + scrollValue * 0.1 + "px, 0)";
+            });
+        });
+
+        // Particles
+        document.addEventListener("DOMContentLoaded", function () {
+            particlesJS("particles-js", {
+                particles: { number: { value: 10 }, size: { value: 1 } }
+            });
+        });
+
+
     </script>
+
 </body>
 
 </html>
