--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Mohamed Eltaib</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css" rel="stylesheet" />
     <link href="style.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="logo.png">
@@ -12,7 +12,11 @@
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
 </head>
 
+
+
+
 <body>
+
     <div class="background-video">
         <video autoplay loop muted playsinline>
             <source src="assets/back.webm" type="video/webm">
@@ -35,7 +39,9 @@
             <li class="link" id="link2"><a href="#overview">Skills</a></li>
             <li class="link" id="link3"><a href="#contact">About Me</a></li>
         </ul>
+
     </nav>
+
     <div class="separator">
     </div>
     <div class="separator2">
@@ -113,7 +119,7 @@
 
 
 
-        <h2 class="header" style="text-align: center; font-size: 34px; ">SKILLS</h2>
+        <h2 class="header" style="text-align: center; font-size: 34px; ">SKILLS</h2>f
         <div class="features">
             <div class="card">
                 <i class="ri-money-dollar-box-line"></i>
@@ -198,6 +204,14 @@
         </div>
 
 
+    </section>
+
+
+
+    <section class="container hidden" id="resume">
+        <h2 class="header">Take A Copy Of My Resume!</h2>
+        <a class="download" href="https://github.com/RyzenStudios/Portfolio/raw/main/Eltaib_Resume.pdf"
+            download="Eltaib_Resume.pdf">Download Resume</a>
     </section>
 
     <section class="container hidden" id="contact">
