--- a/index.html
+++ b/index.html
@@ -149,23 +149,27 @@
     <h2 class="section-title">My Projects</h2>
 
     <section id="projects">
-
         <div class="project">
-            <h3>Movie Website Explorer</h3>
+            <h3>Movie Website</h3>
+            <img src="assets/movie.PNG" alt="Eli Camps Website Thumbnail">
+            <p>Dedesigned my Movie Website to also work with television.</p>
+            <a href="https://github.com/RyzenStudios/Movie-Website-Explorer-" target="_blank">Visit</a>
+            <a href="https://github.com/RyzenStudios/Movie-Website-Explorer-" target="_blank"
+                class="view-code-link">View
+                Code</a>
+        </div>
+        <div class="project">
+            <h3>QuickFix Bug Reporter</h3>
             <img src="assets/thum.PNG" alt="Movie Website Explorer Thumbnail">
             <p>Explore movie details, reviews, and ratings.</p>
-            <a href="https://ryzenstudios.github.io/Movie-Website-Explorer-" target="_blank">Visit</a>
-            <a href="https://github.com/RyzenStudios/Movie-Website-Explorer-" target="_blank"
-                class="view-code-link">View Code</a>
-
+            <a href="https://github.com/Karishvan/QuickFix" target="_blank" class="view-code-link">View Code</a>
         </div>
 
         <div class="project">
             <h3>Sketchbook</h3>
             <img src="assets/draw.PNG" alt="Eli Camps Website Thumbnail">
             <p>App to draw whatever you desire!</p>
-            <a href="https://ryzenstudios.github.io/Eli-Camps-Website" target="_blank">Visit</a>
-            <a href="https://github.com/RyzenStudios/Eli-Camps-Website" target="_blank" class="view-code-link">View
+            <a href="https://github.com/RyzenStudios/DrawingApp" target="_blank" class="view-code-link">View
                 Code</a>
         </div>
 
@@ -198,7 +202,6 @@
             <h3>StormSense</h3>
             <img src="assets/weather.PNG" alt="Weather">
             <p>Stay ahead of the storm with StormSense.</p>
-            <a href="https://github.com/RyzenStudios/stormsense" target="_blank">Visit</a>
             <a href="https://github.com/RyzenStudios/stormsense" target="_blank" class="view-code-link">View
                 Code</a>
         </div>
@@ -211,6 +214,19 @@
             <a href="https://github.com/RyzenStudios/Eli-Camps-Website" target="_blank" class="view-code-link">View
                 Code</a>
         </div>
+        <div class="project">
+            <h3>Ada Analytics Chatbot</h3>
+            <img src="assets/chatbot.PNG" alt="Eli Camps Website Thumbnail">
+            <p>Chatbot for information about stocks and predictions.</p>
+        </div>
+        <div class="project">
+            <h3>Cat Adoption Web App</h3>
+            <img src="assets/cat.PNG" alt="Eli Camps Website Thumbnail">
+            <p>Web App to find cats in need of adoption in cities near you.</p>
+            <a href="https://github.com/RyzenStudios/KittyCompass" target="_blank" class="view-code-link">View
+                Code</a>
+        </div>
+
     </section>
 
 
