--- a/index.html
+++ b/index.html
@@ -77,54 +77,64 @@
         </p>
         <h2 class="header" style="text-align: center; font-size: 34px; ">LANGUAGES</h2>
 
+
+
         <section id="language-badges">
-            <div class="features">
+            <div class="boxes">
                 <div class="card">
-                    <img src="https://img.shields.io/badge/python-3670A0?style=for-the-badge&logo=python&logoColor=ffdd54"
-                        alt="Python Badge" style="width: 110px; height: 35px;">
+                    <img src="https://img.shields.io/badge/Python-3670A0?style=for-the-badge&logo=python&logoColor=ffdd54"
+                        alt="Python Badge">
                 </div>
                 <div class="card">
-                    <img src="https://img.shields.io/badge/java-007396?style=for-the-badge&logo=java&logoColor=white"
-                        alt="Java Badge" style="width: 70px; height: 35px;">
+                    <img src="https://img.shields.io/badge/Java-007396?style=for-the-badge&logo=java&logoColor=white"
+                        alt="Java Badge">
                 </div>
                 <div class="card">
-                    <img src="https://img.shields.io/badge/c-A8B9CC?style=for-the-badge&logo=c&logoColor=white"
-                        alt="C Badge" style="width: 70px; height: 35px;">
-                </div>
-                <div class="card">
-                    <img src="https://img.shields.io/badge/html-E34F26?style=for-the-badge&logo=html5&logoColor=white"
-                        alt="HTML Badge" style="width: 100px; height: 35px;">
-                </div>
-                <div class="card">
-                    <img src="https://img.shields.io/badge/CSS-1572B6?style=for-the-badge&logo=css3&logoColor=white"
-                        alt="Css" style="width: 80px; height: 35px;">
+                    <img src="https://img.shields.io/badge/C/C++-00599C?style=for-the-badge&logo=c%2B%2B&logoColor=white"
+                        alt="C/C++ Badge">
                 </div>
                 <div class="card">
                     <img src="https://img.shields.io/badge/JavaScript-F7DF1E?style=for-the-badge&logo=javascript&logoColor=white"
-                        alt="JavaS" style="width: 120px; height: 30px;">
+                        alt="JavaScript Badge">
                 </div>
                 <div class="card">
-                    <img src="https://img.shields.io/badge/Lisp-5886A5?style=for-the-badge&logo=lisp&logoColor=white"
-                        alt="Lisp" style="width: 70px; height: 35px;">
+                    <img src="https://img.shields.io/badge/HTML%2FCSS-E34F26?style=for-the-badge&logo=html5&logoColor=white"
+                        alt="HTML/CSS Badge">
                 </div>
                 <div class="card">
-                    <img src="https://img.shields.io/badge/Git-F05032?style=for-the-badge&logo=git&logoColor=white"
-                        alt="Git" style="width: 80px; height: 35px;">
+                    <img src="https://img.shields.io/badge/Bash-4EAA25?style=for-the-badge&logo=gnu-bash&logoColor=white"
+                        alt="Bash Badge">
+                </div>
+                <div class="card">
+                    <img src="https://img.shields.io/badge/LISP-5886A5?style=for-the-badge&logo=lisp&logoColor=white"
+                        alt="LISP Badge">
+                </div>
+                <div class="card">
+                    <img src="https://img.shields.io/badge/SmallTalk-59666C?style=for-the-badge&logo=smalltalk&logoColor=white"
+                        alt="SmallTalk Badge">
+                </div>
+                <div class="card">
+                    <img src="https://img.shields.io/badge/Elixir-4B275F?style=for-the-badge&logo=elixir&logoColor=white"
+                        alt="Elixir Badge">
+                </div>
+                <div class="card">
+                    <img src="https://img.shields.io/badge/Haskell-5D4F85?style=for-the-badge&logo=haskell&logoColor=white"
+                        alt="Haskell Badge">
+                </div>
+                <div class="card">
+                    <img src="https://img.shields.io/badge/Rust-000000?style=for-the-badge&logo=rust&logoColor=white"
+                        alt="Rust Badge">
                 </div>
             </div>
         </section>
 
 
-
-
-
-
-        <h2 class="header" style="text-align: center; font-size: 34px; ">SKILLS</h2>f
+        <h2 class="header" style="text-align: center; font-size: 34px; ">SKILLS</h2>
         <div class="features">
             <div class="card">
                 <i class="ri-money-dollar-box-line"></i>
                 <h4>Languages</h4>
-                <p>Python, Java, C/C++, HTML, CSS, JavaScript, Lisp, SmallTalk</p>
+                <p>Python, Java, C/C++, JavaScript, HTML/CSS, Bash, Lisp, SmallTalk, Elixir, Haskell, Rust</p>
             </div>
             <div class="card">
                 <i class="ri-money-dollar-box-line"></i>
@@ -135,16 +145,22 @@
             <div class="card">
                 <i class="ri-money-dollar-box-line"></i>
                 <h4>Experience</h4>
-                <p>Designer at Gamefam Studios for almost 2 years, involved with Sonic, TMNT, NFL, Spongebob, Barbie,
+                <p>Designer at Gamefam Studios for almost 2 years, involved with Sonic, TMNT, NFL, Spongebob,
+                    Barbie,
                     etc.</p>
+                <p>Software Engineer Intern at Ada Analytics, contributing to projects in XYZ area.</p>
             </div>
             <div class="card">
                 <i class="ri-money-dollar-box-line"></i>
-                <h4>Technologies</h4>
-                <p>React, Node.js, Git, AWS, WordPress</p>
+                <h4>Education</h4>
+                <p>Currently in 2nd year pursuing a Bachelor's degree in Computer Science at Toronto Metropolitan
+                    University
+                </p>
             </div>
         </div>
     </section>
+
+
 
     <h2 class="section-title">My Projects</h2>
 
@@ -228,6 +244,8 @@
         </div>
 
     </section>
+
+
 
 
     <h2 class="section-title">3D Design</h2>
