--- a/index.html
+++ b/index.html
@@ -75,12 +75,13 @@
             Computer science major with expertise in programming, algorithm design, and data structures. Passionate
             about leveraging technology for challenging problem-solving. Experienced in Java and Python.
         </p>
+
+
         <h2 class="header" style="text-align: center; font-size: 34px; ">LANGUAGES</h2>
-
-
 
         <section id="language-badges">
             <div class="boxes">
+                <!-- Language Badges -->
                 <div class="card">
                     <img src="https://img.shields.io/badge/Python-3670A0?style=for-the-badge&logo=python&logoColor=ffdd54"
                         alt="Python Badge">
@@ -90,7 +91,7 @@
                         alt="Java Badge">
                 </div>
                 <div class="card">
-                    <img src="https://img.shields.io/badge/C/C++-00599C?style=for-the-badge&logo=c%2B%2B&logoColor=white"
+                    <img src="https://img.shields.io/badge/C%2B%2B-00599C?style=for-the-badge&logo=c%2B%2B&logoColor=white"
                         alt="C/C++ Badge">
                 </div>
                 <div class="card">
@@ -127,35 +128,55 @@
                 </div>
             </div>
         </section>
+        <h2 class="header" style="text-align: center; font-size: 34px; ">FRAMEWORKS</h2>
 
-
-        <h2 class="header" style="text-align: center; font-size: 34px; ">SKILLS</h2>
-        <div class="features">
-            <div class="card">
-                <i class="ri-money-dollar-box-line"></i>
-                <h4>Languages</h4>
-                <p>Python, Java, C/C++, JavaScript, HTML/CSS, Bash, Lisp, SmallTalk, Elixir, Haskell, Rust</p>
+        <section id="language-badges">
+            <div class="boxes">
+                <div class="card">
+                    <img src="https://img.shields.io/badge/Flask-000000?style=for-the-badge&logo=flask&logoColor=white"
+                        alt="Flask Badge">
+                </div>
+                <div class="card">
+                    <img src="https://img.shields.io/badge/Django-092D44?style=for-the-badge&logo=django&logoColor=white"
+                        alt="Django Badge">
+                </div>
+                <div class="card">
+                    <img src="https://img.shields.io/badge/Git-F05032?style=for-the-badge&logo=git&logoColor=white"
+                        alt="Git Badge">
+                </div>
+                <div class="card">
+                    <img src="https://img.shields.io/badge/AWS-232F3E?style=for-the-badge&logo=amazonaws&logoColor=white"
+                        alt="AWS Badge">
+                </div>
+                <div class="card">
+                    <img src="https://img.shields.io/badge/React.js-61DAFB?style=for-the-badge&logo=react&logoColor=black"
+                        alt="React.js Badge">
+                </div>
             </div>
-            <div class="card">
-                <i class="ri-money-dollar-box-line"></i>
+        </section>
+
+        <hr class="divider">
+
+        <div class="skills-list">
+            <div class="skill-item">
+                <i class="ri-book-line"></i>
                 <h4>Courses</h4>
                 <p>Data Structures, Operating Systems, Discrete Structures, Software Engineering,
                     Computer Science I/II, Computer Organization I/II, Intro to C and UNIX, Linear Algebra</p>
             </div>
-            <div class="card">
-                <i class="ri-money-dollar-box-line"></i>
+            <div class="skill-item">
+                <i class="ri-briefcase-line"></i>
                 <h4>Experience</h4>
                 <p>Designer at Gamefam Studios for almost 2 years, involved with Sonic, TMNT, NFL, Spongebob,
-                    Barbie,
-                    etc.</p>
-                <p>Software Engineer Intern at Ada Analytics, contributing to projects in XYZ area.</p>
+                    Barbie, etc.</p>
+                <p>Software Engineer Intern at Ada Analytics, contributing to developing a stock prediction tool using
+                    AI.</p>
             </div>
-            <div class="card">
-                <i class="ri-money-dollar-box-line"></i>
+            <div class="skill-item">
+                <i class="ri-graduation-cap-line"></i>
                 <h4>Education</h4>
-                <p>Currently in 2nd year pursuing a Bachelor's degree in Computer Science at Toronto Metropolitan
-                    University
-                </p>
+                <p>Currently in 3rd year pursuing a Bachelor's degree in Computer Science at Toronto Metropolitan
+                    University</p>
             </div>
         </div>
     </section>
@@ -165,20 +186,31 @@
     <h2 class="section-title">My Projects</h2>
 
     <section id="projects">
+
+        <div class="project">
+            <h3>DryEye AI</h3>
+            <img src="assets/dryeye.PNG" alt="Portfolio Website ">
+            <p>Predicts drought conditions using ML and CV for TerraHacks 2024.</p>
+            <a href="https://devpost.com/software/dryeye-ai" target="_blank">Hackathon Page</a>
+            <a href="https://github.com/burhan-dahod/DryEye" target="_blank" class="view-code-link">View
+                Code</a>
+        </div>
+
+
+        <div class="project">
+            <h3>QuickFix Bug Reporter</h3>
+            <img src="assets/bug.PNG" alt="Movie Website Explorer Thumbnail">
+            <p>Web App designed for efficient bug reporting, tracking, visualization.</p>
+            <a href="https://github.com/Karishvan/QuickFix" target="_blank" class="view-code-link">View Code</a>
+        </div>
+
         <div class="project">
             <h3>Movie Website</h3>
             <img src="assets/movie.PNG" alt="Eli Camps Website Thumbnail">
-            <p>Dedesigned my Movie Website to also work with television.</p>
-            <a href="https://github.com/RyzenStudios/Movie-Website-Explorer-" target="_blank">Visit</a>
+            <p>Browse and discover movies and keep up with movies/shows.</p>
             <a href="https://github.com/RyzenStudios/Movie-Website-Explorer-" target="_blank"
                 class="view-code-link">View
                 Code</a>
-        </div>
-        <div class="project">
-            <h3>QuickFix Bug Reporter</h3>
-            <img src="assets/thum.PNG" alt="Movie Website Explorer Thumbnail">
-            <p>Explore movie details, reviews, and ratings.</p>
-            <a href="https://github.com/Karishvan/QuickFix" target="_blank" class="view-code-link">View Code</a>
         </div>
 
         <div class="project">
@@ -204,16 +236,18 @@
             <p>Future of investing.</p>
             <a href="https://adaanalytics.io/" target="_blank">Visit</a>
         </div>
-
         <div class="project">
-            <h3>This Website</h3>
-            <img src="assets/port.PNG" alt="Portfolio Website ">
-            <p>Check out the code for this hand made portfolio.</p>
-            <a href="https://mohamedeltaib.ca/" target="_blank">Visit</a>
-            <a href="https://github.com/RyzenStudios/Portfolio" target="_blank" class="view-code-link">View
+            <h3>Ada Analytics Chatbot</h3>
+            <img src="assets/chatbot.PNG" alt="Eli Camps Website Thumbnail">
+            <p>Chatbot for information about stocks and predictions.</p>
+        </div>
+        <div class="project">
+            <h3>Cat Adoption Web App</h3>
+            <img src="assets/cat.PNG" alt="Eli Camps Website Thumbnail">
+            <p>Web App to find cats in need of adoption in cities near you.</p>
+            <a href="https://github.com/RyzenStudios/KittyCompass" target="_blank" class="view-code-link">View
                 Code</a>
         </div>
-
         <div class="project">
             <h3>StormSense</h3>
             <img src="assets/weather.PNG" alt="Weather">
@@ -230,25 +264,15 @@
             <a href="https://github.com/RyzenStudios/Eli-Camps-Website" target="_blank" class="view-code-link">View
                 Code</a>
         </div>
-        <div class="project">
-            <h3>Ada Analytics Chatbot</h3>
-            <img src="assets/chatbot.PNG" alt="Eli Camps Website Thumbnail">
-            <p>Chatbot for information about stocks and predictions.</p>
-        </div>
-        <div class="project">
-            <h3>Cat Adoption Web App</h3>
-            <img src="assets/cat.PNG" alt="Eli Camps Website Thumbnail">
-            <p>Web App to find cats in need of adoption in cities near you.</p>
-            <a href="https://github.com/RyzenStudios/KittyCompass" target="_blank" class="view-code-link">View
-                Code</a>
-        </div>
+
+
 
     </section>
 
 
 
 
-    <h2 class="section-title">3D Design</h2>
+    <h2 class="section-title">3D Design Reel</h2>
 
     <div style="padding:56.25% 0 0 0;position:relative;">
         <iframe src="https://player.vimeo.com/video/913576706?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
@@ -284,7 +308,8 @@
         <div class="social-links">
             <a href="https://twitter.com/Ryzen_Studios" rel="noopener noreferrer" target="_blank">
                 <img alt="Twitter" height="32"
-                    src="https://www.freepnglogos.com/x-logo-twitter-transparent-logo-download-3.png" width="32" />
+                    src="https://cdn.prod.website-files.com/5d66bdc65e51a0d114d15891/64cebe1d31f50e161e4c825a_X-logo-transparent-white-twitter.png"
+                    width="32" />
             </a>
             <a href="https://www.linkedin.com/in/mohamed-eltaib-50736b25b/" rel="noopener noreferrer" target="_blank">
                 <img alt="LinkedIn" height="32"
@@ -301,7 +326,6 @@
         </div>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
-    <script src="index.js"></script>
     <script>
 
         //background
@@ -337,20 +361,24 @@
                 project.classList.toggle("fullscreen");
 
                 if (project.classList.contains("fullscreen")) {
-                    document.addEventListener("click", exitFullScreen);
+                    setTimeout(() => {
+                        document.addEventListener("click", exitFullScreen);
+                    }, 0);
                 } else {
                     document.removeEventListener("click", exitFullScreen);
                 }
+            }
 
-                function exitFullScreen(event) {
-                    if (!project.contains(event.target)) {
-                        project.classList.remove("fullscreen");
-                        document.removeEventListener("click", exitFullScreen);
-                    }
+            function exitFullScreen(event) {
+                var fullscreenProject = document.querySelector(".project.fullscreen");
+                if (fullscreenProject && !fullscreenProject.contains(event.target)) {
+                    fullscreenProject.classList.remove("fullscreen");
+                    document.removeEventListener("click", exitFullScreen);
                 }
             }
         });
     </script>
+
 </body>
 
 </html>
